--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,25 @@
+server:
+  port: 8081
+
 spring:
+  docker:
+    compose:
+      enabled: false
+
   servlet:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+
   application:
     name: userManagementMicroService
-datasource:
-  url: jdbc:postgresql://localhost:5432/postgres
-  driverClassName: org.postgresql.Driver
-  username: myuser
-  password: secret
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    driver-class-name: org.postgresql.Driver
+    username: myuser
+    password: secret
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -17,9 +27,9 @@ datasource:
     properties:
       hibernate:
         format_sql: true
+
 token:
   signing:
     key: NjU0MzIxMDEwMjM0NTY3ODkwMTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY=
 
 YANDEX_INFO_URL: "https://login.yandex.ru/info?format=json"
-
