fix: issue with auto creating tables

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,10 @@ spring:
     name: userManagementMicroService
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: ${DB_URL}
     driver-class-name: org.postgresql.Driver
-    username: myuser
-    password: secret
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
 
   jpa:
     hibernate:
@@ -27,9 +27,5 @@ spring:
 
 server:
   port: 8282
-
-token:
-  signing:
-    key: NjU0MzIxMDEwMjM0NTY3ODkwMTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY=
 
 YANDEX_INFO_URL: "https://login.yandex.ru/info?format=json"
