--- a/backend/management-service/src/main/resources/application.yml
+++ b/backend/management-service/src/main/resources/application.yml
@@ -3,15 +3,16 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+
   application:
     name: ManagementService
-server:
-  port: 8181
-datasource:
-  url: jdbc:postgresql://localhost:5432/postgres
-  driverClassName: org.postgresql.Driver
-  username: myuser
-  password: secret
+
+  datasource:
+    url: ${DB_URL}
+    driverClassName: org.postgresql.Driver
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -19,5 +20,7 @@ datasource:
     properties:
       hibernate:
         format_sql: true
+server:
+  port: 8181
 
 YANDEX_INFO_URL: "https://login.yandex.ru/info?format=json"
