--- a/backend/management-service/build.gradle
+++ b/backend/management-service/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     testImplementation platform('org.testcontainers:testcontainers-bom:1.20.1')
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
+    testImplementation 'org.testcontainers:jdbc'
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
